--- a/examples/inets.config
+++ b/examples/inets.config
@@ -14,10 +14,10 @@
                      ]}
          ]},
  {promexp, [
-          % {collector, [
-          %              {"m", 16#0001, {promexp_collector_erts, collect_memory, []}},
-          %              {"s", 16#03dd, {promexp_collector_erts, collect_statistics, []}},
-          %              {"i", 16#0000, {promexp_collector_erts, collect_system_info, []}}
-          %             ]}
+            {collector, [
+                         {"m", 16#0001, {promexp_collector_erts, collect_memory, []}},
+                         {"s", 16#03dd, {promexp_collector_erts, collect_statistics, []}},
+                         {"i", 16#0000, {promexp_collector_erts, collect_system_info, []}}
+                        ]}
            ]}
 ].
