--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
-language: erlang
-
+language: elixir
+elixir:
+  - 1.4.4
+  - 1.4.3
+  - 1.3.4
 otp_release:
   - 19.3
   - 19.2
   - 18.3
+sudo: false
